Revision history for Svsh

{{$NEXT}}

1.001000  2015-08-06 22:21:11+03:00 Asia/Jerusalem
	- Add history_file usage for bash-like history
	- Add autocompletion to all argument taking commands
	- Add Term::ReadLine::Gnu recommendation (for better history/autocomplete)
	- Use s6-svscanctl -t instead of -7 to terminate s6-svscan
	- Implement terminate for runit (requires Process::Killall)

1.000000  2015-08-04 00:20:24+03:00 Asia/Jerusalem
	- First public release